add entity pdf image
